// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageMaker should be editable 1`] = `
<div>
  <div
    class="ant-ext-pm__container"
  >
    <div
      class="ant-ext-pm__page"
      data-editing="true"
      data-type="page"
    >
      <div
        class="ant-ext-pm__grid"
      >
        <div
          class="ant-ext-pm__item"
          data-expanded="false"
          data-hover="false"
          data-id="head-1"
          data-type="heading"
        >
          <div
            style="color: rgb(72, 126, 176); font-size: 18px;"
          >
            <div>
              Heading
            </div>
          </div>
          <div
            class="ant-ext-pm__head"
            draggable="true"
          >
            <small>
              heading
            </small>
            <div>
              <button>
                <span
                  aria-label="drag"
                  class="anticon anticon-drag"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="drag"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                    />
                  </svg>
                </span>
              </button>
              <button>
                <span
                  aria-label="delete"
                  class="anticon anticon-delete"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="delete"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-ext-pm__item"
          data-expanded="false"
          data-hover="false"
          data-id="div-1"
          data-type="divider"
        >
          <div
            class="ant-divider ant-divider-horizontal"
            role="separator"
            style="font-size: 13px;"
          />
          <div
            class="ant-ext-pm__head"
            draggable="true"
          >
            <small>
              divider
            </small>
            <div>
              <button>
                <span
                  aria-label="drag"
                  class="anticon anticon-drag"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="drag"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                    />
                  </svg>
                </span>
              </button>
              <button>
                <span
                  aria-label="delete"
                  class="anticon anticon-delete"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="delete"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-ext-pm__item"
          data-expanded="false"
          data-hover="false"
          data-id="row-2"
          data-type="row"
          style="min-height: 400px;"
        >
          <div
            class="ant-ext-pm__rowContainer"
          >
            <div
              class="ant-ext-pm__item"
              data-expanded="false"
              data-hover="false"
              data-id="col-2"
              data-type="col"
              style="grid-column-end: span 3; grid-auto-rows: auto;"
            >
              <div
                class="ant-ext-pm__item"
                data-expanded="false"
                data-hover="false"
                data-id="tile-2"
                data-type="tile"
              >
                <div
                  class="ant-ext-pm__tileHead"
                >
                  <span
                    style="color: rgb(34, 112, 147);"
                  >
                    <i
                      class="mdi mdi-chart-pie"
                    />
                  </span>
                  <label
                    style="color: rgb(34, 112, 147);"
                  >
                    Tile head
                  </label>
                  <div>
                    <button>
                      <span
                        aria-label="info-circle"
                        class="anticon anticon-info-circle"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="info-circle"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                          />
                          <path
                            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </span>
                    </button>
                    <button>
                      <span
                        aria-label="edit"
                        class="anticon anticon-edit"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="edit"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-ext-pm__tileBody"
                >
                  <div
                    style="place-self: center; text-align: center;"
                  >
                    <span
                      aria-label="pie-chart"
                      class="anticon anticon-pie-chart"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pie-chart"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M864 518H506V160c0-4.4-3.6-8-8-8h-26a398.46 398.46 0 00-282.8 117.1 398.19 398.19 0 00-85.7 127.1A397.61 397.61 0 0072 552a398.46 398.46 0 00117.1 282.8c36.7 36.7 79.5 65.6 127.1 85.7A397.61 397.61 0 00472 952a398.46 398.46 0 00282.8-117.1c36.7-36.7 65.6-79.5 85.7-127.1A397.61 397.61 0 00872 552v-26c0-4.4-3.6-8-8-8zM705.7 787.8A331.59 331.59 0 01470.4 884c-88.1-.4-170.9-34.9-233.2-97.2C174.5 724.1 140 640.7 140 552c0-88.7 34.5-172.1 97.2-234.8 54.6-54.6 124.9-87.9 200.8-95.5V586h364.3c-7.7 76.3-41.3 147-96.6 201.8zM952 462.4l-2.6-28.2c-8.5-92.1-49.4-179-115.2-244.6A399.4 399.4 0 00589 74.6L560.7 72c-4.7-.4-8.7 3.2-8.7 7.9V464c0 4.4 3.6 8 8 8l384-1c4.7 0 8.4-4 8-8.6zm-332.2-58.2V147.6a332.24 332.24 0 01166.4 89.8c45.7 45.6 77 103.6 90 166.1l-256.4.7z"
                        />
                      </svg>
                    </span>
                    <div>
                      Test Widget
                    </div>
                  </div>
                </div>
                <div
                  class="ant-ext-pm__head"
                  draggable="true"
                >
                  <small>
                    tile
                  </small>
                  <div>
                    <button>
                      <span
                        aria-label="drag"
                        class="anticon anticon-drag"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="drag"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                          />
                        </svg>
                      </span>
                    </button>
                    <button>
                      <span
                        aria-label="delete"
                        class="anticon anticon-delete"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="delete"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-ext-pm__resizer"
              />
              <div
                class="ant-ext-pm__head"
                draggable="true"
              >
                <small>
                  col
                </small>
                <div>
                  <button>
                    <span
                      aria-label="drag"
                      class="anticon anticon-drag"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="drag"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                        />
                      </svg>
                    </span>
                  </button>
                  <button>
                    <span
                      aria-label="delete"
                      class="anticon anticon-delete"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="delete"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-ext-pm__item"
              data-expanded="false"
              data-hover="false"
              data-id="col-3"
              data-type="col"
              style="grid-column-end: span 6; grid-auto-rows: max-content;"
            >
              <div
                class="ant-ext-pm__item"
                data-expanded="false"
                data-hover="false"
                data-id="head-2"
                data-type="heading"
              >
                <div
                  style="color: rgb(72, 126, 176); font-size: 18px;"
                >
                  <div>
                    Heading
                  </div>
                </div>
                <div
                  class="ant-ext-pm__head"
                  draggable="true"
                >
                  <small>
                    heading
                  </small>
                  <div>
                    <button>
                      <span
                        aria-label="drag"
                        class="anticon anticon-drag"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="drag"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                          />
                        </svg>
                      </span>
                    </button>
                    <button>
                      <span
                        aria-label="delete"
                        class="anticon anticon-delete"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="delete"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-ext-pm__item"
                data-expanded="false"
                data-hover="false"
                data-id="div-2"
                data-type="divider"
              >
                <div
                  class="ant-divider ant-divider-horizontal"
                  role="separator"
                  style="font-size: 13px;"
                />
                <div
                  class="ant-ext-pm__head"
                  draggable="true"
                >
                  <small>
                    divider
                  </small>
                  <div>
                    <button>
                      <span
                        aria-label="drag"
                        class="anticon anticon-drag"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="drag"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                          />
                        </svg>
                      </span>
                    </button>
                    <button>
                      <span
                        aria-label="delete"
                        class="anticon anticon-delete"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="delete"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-ext-pm__item"
                data-expanded="false"
                data-hover="false"
                data-id="row-2"
                data-type="row"
                style="min-height: 400px;"
              >
                <div
                  class="ant-ext-pm__rowContainer"
                />
                <div
                  class="ant-ext-pm__resizer"
                />
                <div
                  class="ant-ext-pm__head"
                  draggable="true"
                >
                  <small>
                    row
                  </small>
                  <div>
                    <button>
                      <span
                        aria-label="drag"
                        class="anticon anticon-drag"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="drag"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                          />
                        </svg>
                      </span>
                    </button>
                    <button>
                      <span
                        aria-label="delete"
                        class="anticon anticon-delete"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="delete"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-ext-pm__resizer"
              />
              <div
                class="ant-ext-pm__head"
                draggable="true"
              >
                <small>
                  col
                </small>
                <div>
                  <button>
                    <span
                      aria-label="drag"
                      class="anticon anticon-drag"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="drag"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                        />
                      </svg>
                    </span>
                  </button>
                  <button>
                    <span
                      aria-label="delete"
                      class="anticon anticon-delete"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="delete"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-ext-pm__item"
              data-expanded="false"
              data-hover="false"
              data-id="col-4"
              data-type="col"
              style="grid-column-end: span 3; grid-auto-rows: max-content;"
            >
              <div
                class="ant-ext-pm__emptyCol"
              >
                <div>
                  Drag a widget from the sidebar
                </div>
                <div
                  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
                  role="separator"
                >
                  <span
                    class="ant-divider-inner-text"
                  >
                    or
                  </span>
                </div>
                <button
                  class="ant-btn"
                  type="button"
                >
                  <span
                    aria-label="plus-circle"
                    class="anticon anticon-plus-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="plus-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
                      />
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                    </svg>
                  </span>
                  <span>
                    Add New Widget
                  </span>
                </button>
              </div>
              <div
                class="ant-ext-pm__resizer"
              />
              <div
                class="ant-ext-pm__head"
                draggable="true"
              >
                <small>
                  col
                </small>
                <div>
                  <button>
                    <span
                      aria-label="drag"
                      class="anticon anticon-drag"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="drag"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                        />
                      </svg>
                    </span>
                  </button>
                  <button>
                    <span
                      aria-label="delete"
                      class="anticon anticon-delete"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="delete"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-ext-pm__resizer"
          />
          <div
            class="ant-ext-pm__head"
            draggable="true"
          >
            <small>
              row
            </small>
            <div>
              <button>
                <span
                  aria-label="drag"
                  class="anticon anticon-drag"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="drag"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"
                    />
                  </svg>
                </span>
              </button>
              <button>
                <span
                  aria-label="delete"
                  class="anticon anticon-delete"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="delete"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-ext-pm__aside"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-left"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active ant-collapse-no-arrow"
        >
          <div
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            Widgets
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                class="ant-ext-pm__widgetList"
              >
                <span
                  class="ant-input-group-wrapper ant-input-search"
                >
                  <span
                    class="ant-input-wrapper ant-input-group"
                  >
                    <span
                      class="ant-input-affix-wrapper"
                    >
                      <input
                        class="ant-input"
                        type="text"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="close-circle"
                          class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                          role="button"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="close-circle"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                    <span
                      class="ant-input-group-addon"
                    >
                      <button
                        class="ant-btn ant-btn-icon-only ant-input-search-button"
                        type="button"
                      >
                        <span
                          aria-label="search"
                          class="anticon anticon-search"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </span>
                <div
                  class="ant-ext-pm__widgetList--grid"
                >
                  <div
                    class="ant-ext-pm__widgetList--card"
                    draggable="true"
                  >
                    <span
                      aria-label="pic-center"
                      class="anticon anticon-pic-center"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pic-center"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M952 792H72c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h880c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0-632H72c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h880c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM848 660c8.8 0 16-7.2 16-16V380c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16v264c0 8.8 7.2 16 16 16h672zM232 436h560v152H232V436z"
                        />
                      </svg>
                    </span>
                    <div>
                      Row
                    </div>
                  </div>
                  <div
                    class="ant-ext-pm__widgetList--card"
                    draggable="true"
                  >
                    <span
                      aria-label="pic-center"
                      class="anticon anticon-pic-center"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pic-center"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        style="transform: rotate(90deg);"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M952 792H72c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h880c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0-632H72c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h880c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM848 660c8.8 0 16-7.2 16-16V380c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16v264c0 8.8 7.2 16 16 16h672zM232 436h560v152H232V436z"
                        />
                      </svg>
                    </span>
                    <div>
                      Column
                    </div>
                  </div>
                  <div
                    class="ant-ext-pm__widgetList--card"
                    draggable="true"
                  >
                    <span
                      aria-label="font-size"
                      class="anticon anticon-font-size"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="font-size"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M920 416H616c-4.4 0-8 3.6-8 8v112c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-56h60v320h-46c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h164c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8h-46V480h60v56c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V424c0-4.4-3.6-8-8-8zM656 296V168c0-4.4-3.6-8-8-8H104c-4.4 0-8 3.6-8 8v128c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-64h168v560h-92c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8h-92V232h168v64c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8z"
                        />
                      </svg>
                    </span>
                    <div>
                      Heading
                    </div>
                  </div>
                  <div
                    class="ant-ext-pm__widgetList--card"
                    draggable="true"
                  >
                    <span
                      aria-label="minus"
                      class="anticon anticon-minus"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="minus"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                    <div>
                      Divider
                    </div>
                  </div>
                </div>
                <div
                  class="ant-ext-pm__widgetList--grid"
                >
                  <div
                    class="ant-ext-pm__widgetList--card"
                    draggable="true"
                  >
                    <span
                      aria-label="pie-chart"
                      class="anticon anticon-pie-chart"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pie-chart"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M864 518H506V160c0-4.4-3.6-8-8-8h-26a398.46 398.46 0 00-282.8 117.1 398.19 398.19 0 00-85.7 127.1A397.61 397.61 0 0072 552a398.46 398.46 0 00117.1 282.8c36.7 36.7 79.5 65.6 127.1 85.7A397.61 397.61 0 00472 952a398.46 398.46 0 00282.8-117.1c36.7-36.7 65.6-79.5 85.7-127.1A397.61 397.61 0 00872 552v-26c0-4.4-3.6-8-8-8zM705.7 787.8A331.59 331.59 0 01470.4 884c-88.1-.4-170.9-34.9-233.2-97.2C174.5 724.1 140 640.7 140 552c0-88.7 34.5-172.1 97.2-234.8 54.6-54.6 124.9-87.9 200.8-95.5V586h364.3c-7.7 76.3-41.3 147-96.6 201.8zM952 462.4l-2.6-28.2c-8.5-92.1-49.4-179-115.2-244.6A399.4 399.4 0 00589 74.6L560.7 72c-4.7-.4-8.7 3.2-8.7 7.9V464c0 4.4 3.6 8 8 8l384-1c4.7 0 8.4-4 8-8.6zm-332.2-58.2V147.6a332.24 332.24 0 01166.4 89.8c45.7 45.6 77 103.6 90 166.1l-256.4.7z"
                        />
                      </svg>
                    </span>
                    <div>
                      Test Widget
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageMaker should render 1`] = `
<div>
  <div
    class="ant-ext-pm__container"
  >
    <div
      class="ant-ext-pm__page"
      data-editing="false"
      data-type="page"
    >
      <div
        class="ant-ext-pm__grid"
      >
        <div
          class="ant-ext-pm__item"
          data-expanded="false"
          data-hover="false"
          data-id="head-1"
          data-type="heading"
        >
          <div
            style="color: rgb(72, 126, 176); font-size: 18px;"
          >
            <div>
              Heading
            </div>
          </div>
        </div>
        <div
          class="ant-ext-pm__item"
          data-expanded="false"
          data-hover="false"
          data-id="div-1"
          data-type="divider"
        >
          <div
            class="ant-divider ant-divider-horizontal"
            role="separator"
            style="font-size: 13px;"
          />
        </div>
        <div
          class="ant-ext-pm__item"
          data-expanded="false"
          data-hover="false"
          data-id="row-2"
          data-type="row"
          style="height: 400px;"
        >
          <div
            class="ant-ext-pm__rowContainer"
          >
            <div
              class="ant-ext-pm__item"
              data-expanded="false"
              data-hover="false"
              data-id="col-2"
              data-type="col"
              style="grid-column-end: span 3; grid-auto-rows: auto;"
            >
              <div
                class="ant-ext-pm__item"
                data-expanded="false"
                data-hover="false"
                data-id="tile-2"
                data-type="tile"
              >
                <div
                  class="ant-ext-pm__tileHead"
                >
                  <span
                    style="color: rgb(34, 112, 147);"
                  >
                    <i
                      class="mdi mdi-chart-pie"
                    />
                  </span>
                  <label
                    style="color: rgb(34, 112, 147);"
                  >
                    Tile head
                  </label>
                  <div>
                    <button>
                      <span
                        aria-label="info-circle"
                        class="anticon anticon-info-circle"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="info-circle"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                          />
                          <path
                            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      class="ant-ext-pm__tileExpander"
                    >
                      <span
                        aria-label="fullscreen"
                        class="anticon anticon-fullscreen"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="fullscreen"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M290 236.4l43.9-43.9a8.01 8.01 0 00-4.7-13.6L169 160c-5.1-.6-9.5 3.7-8.9 8.9L179 329.1c.8 6.6 8.9 9.4 13.6 4.7l43.7-43.7L370 423.7c3.1 3.1 8.2 3.1 11.3 0l42.4-42.3c3.1-3.1 3.1-8.2 0-11.3L290 236.4zm352.7 187.3c3.1 3.1 8.2 3.1 11.3 0l133.7-133.6 43.7 43.7a8.01 8.01 0 0013.6-4.7L863.9 169c.6-5.1-3.7-9.5-8.9-8.9L694.8 179c-6.6.8-9.4 8.9-4.7 13.6l43.9 43.9L600.3 370a8.03 8.03 0 000 11.3l42.4 42.4zM845 694.9c-.8-6.6-8.9-9.4-13.6-4.7l-43.7 43.7L654 600.3a8.03 8.03 0 00-11.3 0l-42.4 42.3a8.03 8.03 0 000 11.3L734 787.6l-43.9 43.9a8.01 8.01 0 004.7 13.6L855 864c5.1.6 9.5-3.7 8.9-8.9L845 694.9zm-463.7-94.6a8.03 8.03 0 00-11.3 0L236.3 733.9l-43.7-43.7a8.01 8.01 0 00-13.6 4.7L160.1 855c-.6 5.1 3.7 9.5 8.9 8.9L329.2 845c6.6-.8 9.4-8.9 4.7-13.6L290 787.6 423.7 654c3.1-3.1 3.1-8.2 0-11.3l-42.4-42.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-ext-pm__tileBody"
                >
                  <div />
                </div>
              </div>
            </div>
            <div
              class="ant-ext-pm__item"
              data-expanded="false"
              data-hover="false"
              data-id="col-3"
              data-type="col"
              style="grid-column-end: span 6; grid-auto-rows: max-content;"
            >
              <div
                class="ant-ext-pm__item"
                data-expanded="false"
                data-hover="false"
                data-id="head-2"
                data-type="heading"
              >
                <div
                  style="color: rgb(72, 126, 176); font-size: 18px;"
                >
                  <div>
                    Heading
                  </div>
                </div>
              </div>
              <div
                class="ant-ext-pm__item"
                data-expanded="false"
                data-hover="false"
                data-id="div-2"
                data-type="divider"
              >
                <div
                  class="ant-divider ant-divider-horizontal"
                  role="separator"
                  style="font-size: 13px;"
                />
              </div>
              <div
                class="ant-ext-pm__item"
                data-expanded="false"
                data-hover="false"
                data-id="row-2"
                data-type="row"
                style="height: 400px;"
              >
                <div
                  class="ant-ext-pm__rowContainer"
                />
              </div>
            </div>
            <div
              class="ant-ext-pm__item"
              data-expanded="false"
              data-hover="false"
              data-id="col-4"
              data-type="col"
              style="grid-column-end: span 3; grid-auto-rows: max-content;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
